src/test/deca/context/valid/25_NoOperation.deca
// Description:
//    Test le NoOperation
//
// Résultats:
//
//
// Historique:
//    cree le 16/01/2022

{
        int x;
        ;
}
