src/test/deca/context/invalid/10_unknownIdentifier.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 12: ContextualError: Identifier-type error
// 
// Historique:
//    cree le 01/01/2022

{
   // Doit etre refuse.
   pangolinLepreux p;
}
